Fix contrast errors by adjusting colours

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,7 +13,7 @@ a:hover {
 }
 
 .Content {
-  background-color: #706d6d;
+  background-color: #a19d9d;
   padding: 10px;
   border-radius: 2px;
   border: 2px solid #ffffff;
