--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -9,7 +9,7 @@
 }
 
 .NavBar {
-  background-color: #706d6d;
+  background-color: #a19d9d;
   border: 2px solid #fff;
 }
 
