--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,5 +1,5 @@
 .Post {
-  background-color: #706d6d;
+  background-color: #a19d9d;
   border: 2px solid #ffffff;
   border-radius: 5px;
   margin-bottom: 16px;
