--- a/src/styles/SignInUpForm.module.css
+++ b/src/styles/SignInUpForm.module.css
@@ -3,7 +3,7 @@
 }
 
 .Background {
-  background: #9e2841;
+  background: #d63e5f;
   border-radius: 10px;
   overflow: hidden;
   justify-content: center;
